Criação para recurar apenas 1 pendência e att no getportal
